<resources>
    <string name="app_name">BasicDatastore</string>
    <string name="title">Basic Datastore</string>
    <string name="key">key</string>
    <string name="key_hint">Type key here</string>
    <string name="value">value</string>
    <string name="value_hint">Type value here</string>
    <string name="value_doesnt_exist">value does not exist</string>
    <string name="save">Save</string>
    <string name="read">Read</string>
    <string name="this_field_can_not_be_empty">This field can not be empty</string>
    <string name="data_saved">Data saved</string>
</resources>